repair visible

--- a/sthome.css
+++ b/sthome.css
@@ -200,9 +200,8 @@ ul.list li a {
     top:0;
     width: 30vh;
     height: 30vh;
-    left: -300px;
-    bottom: 0px;
-    margin-top: -50px;
+    right: 110px;
+    margin-top: -40px;
     border-radius: 12px;
     box-shadow: 0 0 10px 3px #C1FCD3;
     border: 1px solid #0CCDA3;
@@ -245,8 +244,8 @@ ul.list li a {
     opacity: 0;
     width: 40px;
     height: 37px;
-    right: 174px;
-    bottom: 156px;
+    margin-left:157px;
+    margin-top: -2pxs;
     cursor: pointer;
     z-index: 2;
 }
@@ -263,6 +262,7 @@ ul.list li a {
     right: 13px;
     transition: 0.6s;
     box-shadow: 0 0 6px 1px #C1FCD3;
+    margin-left: 170px;
 }
 
 /* hamburger menu animation */
